[package]
name = "blackedoutchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async stuff
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.8"

# Network stuff
axum = { version = "0.5", features = ["ws"] }
tokio-socks = "0.5"
tower-http = { version = "0.3", features = ["fs"] }
hyper = "0.14"

# Cryptography
aes-gcm = "0.9"
ed25519-dalek = "1.0"
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"
sha3 = "0.10"

# Databases
diesel = "1.4"

# Utilities
bson = "2.2"
bytes = "1.1"
chrono = "0.4"
ctrlc = { version = "3.2", features = ["termination"] }
data-encoding = "2.3"
libc = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4"
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
toml = "0.5"

[features]
default = ["storage-sqlite"]
storage-sqlite = ["diesel/sqlite"]